# lms-mashinarium

./: Makefile  README.md  docker-compose-base.yaml  docker-compose-deploy.yaml  nginx.conf
lmsback/: .gitignore  Dockerfile  db.sqlite3  fix.txt  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt
lmsback/app/: alembic.ini  main.py  run_migrations.sh
lmsback/app/api/: router.py
lmsback/app/api/v1/routes/: admin.py  category.py  course.py  dialog.py  lesson.py  lesson_progress.py  login.py  messages_ws.py  module.py  practica.py  users.py
lmsback/app/api/v1/schemas/: admin_schema.py  base_schema.py  category_schema.py  (+7 more)
lmsback/app/core/: config.py
lmsback/app/db/: session.py
lmsback/app/db/migrations/: env.py
lmsback/app/db/models/: __init__.py  category.py  course.py  dialog.py  lesson.py  module.py  settings.py  user.py
lmsback/app/services/: admin_service.py  category_service.py  course_service.py  dialog_service.py  lesson_service.py  message_service.py  module_service.py  user_service.py
lmsback/app/tests/: conftest.py  test_users.py
lmsback/app/tests/migrations/: env.py
lmsback/app/utils/: connection_manager.py  files.py  images.py  letter_pattern.py  security.py
lmsback/authapp/: models.py  serializers.py  urls.py  views.py
lmsback/authapp/migrations/: 0001_initial.py  0002_alter_userprofile_managers_and_more.py  0003_alter_userprofile_role.py
lmsback/courseapp/: models.py  serializers.py  urls.py  views.py
lmsback/courseapp/migrations/: 0001_initial.py
lmsback/lmsback/: asgi.py  settings.py  urls.py  wsgi.py
(+136 files in other folders)
