[project]
name = "lmsback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.120.4",
    "pydantic>=2.12.3",
    "uvicorn[standard]>=0.38.0",
    "pydantic-core>=2.0.0",
    "sqlalchemy>=2.0.44",
    "python-dotenv",
    "asyncpg",
    "alembic",
    "envparse",
    "psycopg2-binary",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "loguru>=0.7.3",
]
